--- a/Кузоватонь_буе.mw
+++ b/Кузоватонь_буе.mw
@@ -6,6 +6,8 @@
 * [[Кивать (Кузоватонь буе)|Кивать]] - ({{lang-ru|с. Оськино}})
 * [[Томылово (Кузоватонь буе)|Томылово]] - ({{lang-ru|с. Томылово}})
 
+== Содавикс ломанть тестэнть ==
+*[[Почанин, Алексей Осипович|Алексей Осипович Почанин]]<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!">[http://www.mrkm.ru/news/?id=160  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». С юбилеем!] {{ref-ru}}</ref> (чачсь [[Зеленый Курган (Кузоватонь буе)|Зеленый Курган велесэ]]) — содавикс артыця. Эрзя<ref name="МРОКМ им. И.Д. Воронина_С юбилеем!"/>. 
 == Налткеть ==
 * [http://kuzovatovo.ulo.ru/ Ульяновская область — МО «Кузоватовский район»] {{Ref-ru}}
 
